# xcom-protocol

./: .gitignore  README.md  pyproject.toml
xcom_232i/: XcomRS232.py  __init__.py  constants.py  controller.py
xcom_proto/: XcomAbs.py  XcomLAN.py  XcomRS232.py  __init__.py  parameters.py  protocol.py
