[tool.poetry]
name = "xcom_232i"
version = "0.1.1"
description = "Python library to access Studer-Innotec Xcom-232i device through RS-232 over a serial port"
authors = ["zocker-160 <zocker1600@posteo.net>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/zocker-160/xcom-232i"
repository = "https://github.com/zocker-160/xcom-232i"

[tool.poetry.dependencies]
python = "^3.6"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
